assets/scss/scopes/_article.scss
.s-article {
  > :not(h1):not(h2):not(h3):not(h4) {
    line-height: 1.3;
    color: map-get($darks, "blue");
  }

  > * + * {
    margin: calc(1rem + 1vh) 0 0;
  }

  > :not(img):not(figure) {
    max-width: 40rem;
    margin-left: auto;
    margin-right: auto;
  }

  img, figure {
    max-width: 100%;
  }

  p, li {
    font-size: 1.125rem;
    hyphens: auto;
  }
  strong {
    font-weight: 600;
  }
  blockquote {
    color: lighten(desaturate(map-get($darks, "blue"), 50%), 20%);
    font-style: italic;
    border-left: 0.25rem solid lighten(desaturate(map-get($darks, "blue"), 50%), 50%);
    padding: 0 0 0 1rem;
  }

  // https://blog.typekit.com/2016/08/17/flexible-typography-with-css-locks/
  @media screen and (min-width: 21em) {
    > :not(h1):not(h2):not(h3):not(h4) {
      line-height: calc(1.3em + (1.5 - 1.3) * ((100vw - 21em)/(35 - 21)));
    }

    p, li {
      font-size: calc(1.125em + (1.25 - 1.125) * ((100vw - 21em)/(35 - 21)));
    }
  }

  @media screen and (min-width: 35em) {
    > :not(h1):not(h2):not(h3):not(h4) {
      line-height: 1.5;
    }

    p, li {
      font-size: 1.25rem;
    }
  }
}

